# pronoms

./: .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  publish.yml
docs/: conf.py  directlfq_normalizer.rst  index.rst  l1_normalizer.rst  mad_normalizer.rst  median_normalizer.rst  median_polish_normalizer.rst  quantile_normalizer.rst  rank_normalizer.rst  requirements.txt  splm_normalizer.rst  usage.rst  vsn_normalizer.rst
examples/: normalization_examples.ipynb
src/pronoms/normalizers/: __init__.py  _vsn_engine.py  directlfq_normalizer.py  l1_normalizer.py  mad_normalizer.py  median_normalizer.py  median_polish_normalizer.py  quantile_normalizer.py  rank_normalizer.py  splm_normalizer.py  vsn_normalizer.py
src/pronoms/utils/: __init__.py  plotting.py  r_interface.py  transformations.py  validators.py
tests/: conftest.py  test_directlfq_normalizer.py  test_l1_normalizer.py  test_lazy_imports.py  test_mad_normalizer.py  test_median_normalizer.py  test_median_polish_normalizer.py  test_plotting.py  test_quantile_normalizer.py  test_r_interface.py  test_rank_normalizer.py  test_splm_normalizer.py  test_transformations.py  test_validators.py  test_vsn_normalizer.py
tests/fixtures/vsn/: generate_golden.R  kidney_coef.csv  kidney_input.csv  kidney_meta.csv  kidney_mu.csv  kidney_output.csv  synth_lts50_coef.csv  synth_lts50_input.csv  synth_lts50_meta.csv  synth_lts50_mu.csv  synth_lts50_output.csv  synth_lts99_coef.csv  synth_lts99_meta.csv  synth_lts99_mu.csv  synth_lts99_output.csv  synth_medium_coef.csv  synth_medium_input.csv  synth_medium_meta.csv  synth_medium_mu.csv  synth_medium_output.csv  synth_small_coef.csv  synth_small_input.csv  synth_small_meta.csv  synth_small_mu.csv  synth_small_output.csv  synth_tiny_coef.csv  synth_tiny_input.csv  synth_tiny_meta.csv  synth_tiny_mu.csv  synth_tiny_output.csv
