[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pronoms"
version = "0.1.0"
description = "Flexible normalization methods for proteomics quantitative data"
readme = "README.md"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "rpy2>=3.5"  # R integration
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "flake8",
    "jupyter"
]

[project.urls]
Homepage = "https://github.com/yourusername/pronoms"
Repository = "https://github.com/yourusername/pronoms"

[tool.setuptools.packages.find]
where = ["src"]
